--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -11,7 +11,6 @@
 .menu {
     list-style:none;
     margin: 10px auto;
-    width: 900px;
     width: -moz-fit-content;
     width: fit-content;
     font-family: 'Roboto', sans-serif;
@@ -19,7 +18,7 @@
 .menu > a {
     background: #34495e;
     float: left;
-    position: relative;
+    position: center;
     padding-inline: 10px;
     -webkit-transform: skewX(25deg);
     text-decoration: none;
